# PD_process_APP

./: CMakeLists.txt  README.md  desktop_gait_app.py  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h
